# iterative_ensemble_smoother

./: .gitignore  .mypy.ini  .pre-commit-config.yaml  .readthedocs.yaml  CONTRIBUTING.md  LITERATURE.md  Makefile  README.md  conanfile.txt  create_obs_with_localisation_attributes.py  distance_based_on_real_case.ipynb  distance_based_on_real_case.py  example_config_to_get_pos_and_loc_params_from_rms.yml  howto_update_heat_equation_write_to_storage_evaluate.ipynb  howto_update_heat_equation_write_to_storage_evaluate.py  howto_update_write_to_storage_evaluate.ipynb  lasso.md  linear-boost-adloc.ipynb  new_adaptive_correlation_based_loc.md  pyproject.toml  setup.cfg  setup.py  summary_obs_with_localization_attributes.csv  test_distance_based_loc.ipynb  test_distance_based_loc.py  tox.ini  tracer_obs.txt
.github/: dependabot.yml
.github/workflows/: docs.yml  lint.yml  precommit.yml  testing.yml  typing.yml  upload_to_pypi.yml
docs/: Makefile  assumptions-debug.py  assumptions_limitations.md  assumptions_limitations.py  make.bat  requirements.txt
docs/notes/: ensemble_smoothers.tex  references.bib
docs/source/: Adaptive.py  AdaptiveLocalization.py  Assumptions.py  Lasso.py  LinearRegression.py  MutualFund.py  Oscillator.ipynb  Oscillator.py  Polynomial.ipynb  Polynomial.py  Projection.py  api.rst  bibliography.rst  conf.py  examples.rst  glossary.rst  index.rst  kalman_objective.md  refs.bib
docs/source/_templates/autosummary/: base.rst  class.rst  module.rst
docs/source/tutorials/: Oscillator.nblink  Polynomial.nblink
script/: clang-format
src/iterative_ensemble_smoother/: __init__.py  _ensemble_smoother.py  _ensemble_smoother_row_scaling.py  _iterative_ensemble_smoother.py  _version.py  enif.py  enif_graphical.py  enif_linear_regression.py  enif_precision_estimation.py  enif_utils.py  enkf_linalg.cpp  esmda.py  esmda_adaptive.py  esmda_inversion.py  esmda_localized.py  experimental.py  experimental_sies.py  ies.cpp  ies.hpp  ies.py  ies_config.cpp  ies_data.cpp  ies_data.hpp  linalg.cpp  linalg.hpp  localized.py  sies.py  sies_inversion.py  utils.py
tests/: plot_1D_results.py  simulate_and_update_1d_field.py  test_algorithm.py  test_creation.py  test_enif.py  test_enif_linear_regression.py  test_enif_precision_estimation.py  test_ensemble_smoother.py  test_esmda.py  test_esmda_adaptive.py  test_esmda_inversion.py  test_esmda_localized.py  test_experimental.py  test_experimental_sies.py  test_ies.py  test_increased_belief_case.py  test_input_validation.py  test_properties.py  test_sies.py  test_snapshots.py  test_theoretical_property.py  test_utils.py
tests/snapshots/test_ensemble_smoother/test_ensemble_smoother_update_step/: test_ensemble_smoother_update_step.csv
tests/snapshots/test_ensemble_smoother/test_ensemble_smoother_update_step_with_rowscaling/: test_ensemble_smoother_update_step.csv
tests/snapshots/test_ensemble_smoother/test_iterative_ensemble_smoother_update_step/: test_iterative_ensemble_smoother_update_step.csv
tests/snapshots/test_experimental/test_update_params_3D/3-4-5-1-100-0.0-1.0-0.2-0.001-0.2-False-9984356/: X_post_mean_3D.txt  X_post_stdev_3D.txt
tests/snapshots/test_experimental/test_update_params_3D/3-5-1-1-100-0.0-1.0-0.3-0.001-0.3-False-9984356/: X_post_stdev_3D.txt
tests/snapshots/test_experimental/test_update_params_3D/3-5-1-1-100-0.0-1.0-0.3-0.001-0.3-False-9984356-case4/: X_post_mean_3D.txt
tests/snapshots/test_experimental/test_update_params_3D/3-5-1-1-100-0.0-1.0-0.3-0.001-0.3-True-9984356/: X_post_mean_3D.txt  X_post_stdev_3D.txt
tests/snapshots/test_experimental/test_update_params_3D/5-4-3-0-100-0.0-1.0-0.1-0.01-0.1-False-123456/: X_post_mean_3D.txt
tests/snapshots/test_experimental/test_update_params_3D/5-4-3-0-100-0.0-1.0-0.1-0.01-0.1-False-123456-case2/: X_post_stdev_3D.txt
tests/snapshots/test_experimental/test_update_params_3D/5-4-3-3-100-0.0-1.0-0.1-0.01-0.1-True-8765/: X_post_mean_3D.txt  X_post_stdev_3D.txt
tests/snapshots/test_snapshots/test_ensemble_smoother_update_step/: test_ensemble_smoother_update_step.csv
tests/unit_tests/iterative_ensemble_smoother/: test_utils.py
